--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "prisma",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "prisma": "^4.5.0"
+  }
 }
