--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "4.5.0",
     "prisma": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.3",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   }
 }
